# AoE2NetAPIWrapper

./: .codeclimate.yml  .gitignore  404.html  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: coverage.yml  cron.yml  documentation.yml  publish.yml  tests.yml
aoe2netwrapper/: __init__.py  api.py  converters.py  convertors.py  exceptions.py  nightbot.py
aoe2netwrapper/models/: __init__.py  last_match.py  leaderboard.py  lobbies.py  match.py  match_history.py  matches.py  num_online.py  rating_history.py  strings.py
docs/: Features.md  Getting_Started.md
docs/Features/: index.html
docs/Getting_Started/: index.html
docs/stylesheets/: extra.css
reference/aoe2netwrapper/: index.html
reference/aoe2netwrapper/api/: index.html
reference/aoe2netwrapper/converters/: index.html
reference/aoe2netwrapper/exceptions/: index.html
reference/aoe2netwrapper/models/: index.html
reference/aoe2netwrapper/models/last_match/: index.html
reference/aoe2netwrapper/models/leaderboard/: index.html
reference/aoe2netwrapper/models/lobbies/: index.html
reference/aoe2netwrapper/models/match/: index.html
reference/aoe2netwrapper/models/match_history/: index.html
reference/aoe2netwrapper/models/matches/: index.html
reference/aoe2netwrapper/models/num_online/: index.html
reference/aoe2netwrapper/models/rating_history/: index.html
reference/aoe2netwrapper/models/strings/: index.html
reference/aoe2netwrapper/nightbot/: index.html
search/: search_index.json
tests/: conftest.py  test_aoe2netapi.py  test_aoe2nightbotapi.py  test_aoe2niightbotapi.py  test_converters.py
tests/inputs/: convert_last_match.pkl  convert_leaderboard.pkl  convert_lobbies.pkl  convert_match.pkl  convert_match_history.pkl  convert_matches.pkl  convert_num_online.pkl  convert_rating_history.pkl  convert_strings.pkl  last_match_profileid.json  last_match_steamid.json  leaderboard_defaults.json  leaderboard_profileid.json  leaderboard_search.json  leaderboard_steamid.json  lobbies.json  match_history_steamid.json  match_matchid.json  match_uuid.json  matches_defaults.json  matches_since.json  num_online.json  rating_history_steamid.json  strings.json
